# ved-db-server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCKER.md  DOWNLOAD.md  Dockerfile  INVARIANTS.md  LICENSE  LIMITATIONS.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  V0.2.0_MIGRATION_NOTES.md  WORKSPACE_STRUCTURE.md  build.ps1  build.sh  debug_output.txt  docker-compose.yml  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  ci.yml  release.yml
installer/: BUILD_GUIDE.md  README.md  build-msi.ps1  veddb.wxs
rules/: agent.md
veddb-admin/: Cargo.toml
veddb-admin/src/: client.rs  config.rs  main.rs
veddb-admin/src/commands/: backup.rs  collection.rs  config.rs  mod.rs  stats.rs  user.rs
veddb-compass/: Cargo.toml  README.md  THEMING.md  convert-icons.ps1  create-basic-png.ps1  create-placeholder-icons.ps1  create-simple-icons.ps1  index.html  package-lock.json  package.json  tauri.conf.json  test_compass_ops.rs  test_connection.rs  tsconfig.json  vite.config.ts
veddb-compass/examples/: manual_test.rs  test_connection.rs
veddb-compass/icons/: README.md  icon.icns
veddb-compass/src/: App.css  App.tsx  main.rs  styles.css
veddb-compass/src/components/: AggregationBuilder.tsx  ConnectionForm.tsx  ConnectionManager.tsx  DatabaseExplorer.tsx  ImportExport.tsx  IndexManager.tsx  MetricsDashboard.tsx  Navigation.tsx  QueryBuilder.tsx  UserManagement.tsx
veddb-compass/src/components/__tests__/: ConnectionForm.test.tsx  DatabaseExplorer.test.tsx  ImportExport.test.tsx  IndexManager.test.tsx  MetricsDashboard.test.tsx  UserManagement.test.tsx
veddb-compass/src/components/aggregation/: PipelineHistory.tsx  PipelineResults.tsx  PipelineStageBuilder.tsx  StageEditor.tsx
veddb-compass/src/components/aggregation/__tests__/: AggregationBuilder.test.tsx
veddb-compass/src/components/query-builder/: JsonQueryEditor.tsx  QueryHistory.tsx  QueryResults.tsx  VisualQueryBuilder.tsx
veddb-compass/src/components/query-builder/__tests__/: QueryBuilder.test.tsx
veddb-compass/src/components/ui/: theme-switcher.tsx
veddb-compass/src/components/ui/__tests__/: theme-switcher.test.tsx
veddb-compass/src/lib/: connection-files.ts
veddb-compass/src/store/: index.ts
veddb-compass/src/test/: setup.ts
veddb-compass/tests/: connection_integration_test.rs  protocol_property_test.rs
veddb-core/: Cargo.toml
veddb-core/benches/: kv_benchmarks.rs  ring_benchmarks.rs
veddb-core/examples/: monitoring_example.rs
veddb-core/src/: aggregation.rs  arena.rs  backup.rs  config.rs  core.rs  document.rs  lib.rs  memory.rs  protocol.rs  schema.rs  session.rs  simple_kv.rs
veddb-core/src/auth/: audit.rs  jwt.rs  mod.rs  rbac.rs  user.rs
veddb-core/src/cache/: cache_layer.rs  data_structures.rs  eviction.rs  mod.rs  ttl_manager.rs
veddb-core/src/encryption/: document_encryption.rs  encrypted_storage.rs  key_manager.rs  key_rotation.rs  mod.rs  rotation_state.rs  rotation_state_store.rs  tls.rs
veddb-core/src/index/: btree.rs  builder.rs  manager.rs  mod.rs  statistics.rs
veddb-core/src/kv/: hash_table.rs  mod.rs  shard.rs
veddb-core/src/monitoring/: health.rs  logging.rs  metrics.rs  mod.rs  prometheus_exporter.rs
veddb-core/src/protocol/: advanced_features.rs  compatibility.rs  connection.rs
veddb-core/src/pubsub/: mod.rs  registry.rs  subscriber.rs  tests.rs  topic.rs
veddb-core/src/query/: ast.rs  executor.rs  index_selector.rs  mod.rs  parser.rs  planner.rs
veddb-core/src/replication/: connection.rs  manager.rs  manager_extensions.rs  message.rs  mod.rs  sync.rs
veddb-core/src/ring/: mod.rs  mpmc.rs  spsc.rs
veddb-core/src/snapshot/: format.rs  mod.rs  reader.rs  writer.rs
veddb-core/src/storage/: collection.rs  hybrid.rs  hybrid_encrypted_storage_impl.rs  mod.rs  persistent.rs
veddb-core/src/wal/: entry.rs  mod.rs  reader.rs  replay.rs  writer.rs
veddb-core/tests/: protocol_handlers_test.rs  tcp_integration_test.rs
veddb-migrate/: Cargo.toml  README.md
veddb-migrate/examples/: simple_migration.rs
veddb-migrate/src/: lib.rs  main.rs  migration.rs  v1_reader.rs  v2_writer.rs  validation.rs
veddb-server/: Cargo.toml
veddb-server/src/: main.rs  server.rs  worker.rs
