[workspace]
members = [
    "veddb-core",
    "veddb-server"
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["VedDB Team"]
license = "MIT"
repository = "https://github.com/mihir-Rabari/ved-db-server"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Shared memory and system
memmap2 = "0.9"
nix = { version = "0.27", features = ["event", "fs"] }
libc = "0.2"

# Concurrency and atomics
crossbeam = "0.8"
parking_lot = "0.12"

# gRPC and networking
tonic = "0.10"
prost = "0.12"
quinn = "0.10"

# Serialization
bincode = "1.3"
serde_json = "1.0"

# Benchmarking and testing
criterion = "0.5"
proptest = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Server dependencies
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.0"
tokio-stream = { version = "0.1", features = ["net"] }
