[workspace]
members = [
    "veddb-core",
    "veddb-server",
]
resolver = "2"

[workspace.package]
version = "0.2.11"
edition = "2021"
authors = ["VedDB Team"]
license = "MIT"
repository = "https://github.com/mihir-Rabari/ved-db-server"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Concurrency and data structures
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "6.0"

# Shared memory and system
memmap2 = "0.9"
nix = { version = "0.27", features = ["event", "fs"] }
libc = "0.2"

# Networking and protocols
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
quinn = "0.10"
bytes = "1.5"

# Database and storage
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }

# Cryptography and security
aes-gcm = "0.10"
sha2 = "0.10"
bcrypt = "0.15"
jsonwebtoken = "9.2"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
prometheus = "0.13"

# CLI and configuration
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
config = "0.13"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
regex = "1.10"
crc32fast = "1.3"
num_cpus = "1.16"
zstd = "0.13"

# Testing and benchmarking
criterion = "0.5"
proptest = "1.4"
tokio-test = "0.4"
tempfile = "3.8"

# Tauri dependencies (for veddb-compass)
tauri = { version = "1.5", features = [
    "shell-open",
    "dialog-open",
    "dialog-save", 
    "fs-copy-file",
    "fs-create-dir",
    "fs-exists",
    "fs-read-dir",
    "fs-read-file",
    "fs-remove-dir",
    "fs-remove-file",
    "fs-rename-file",
    "fs-write-file",
    "path-all",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize"
] }
tauri-build = "1.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
inherits = "release"
debug = true
