[package]
name = "veddb-compass"
version = "0.2.0"
edition = "2021"
description = "Desktop GUI application for VedDB database management"
authors = ["VedDB Team"]
license = "MIT"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

# Additional dependencies for VedDB operations
veddb-client = { path = "../../ved-db-rust-client" }
async-channel = "2.1"
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
proptest = "1.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "test_connection"
path = "test_connection.rs"
