[package]
name = "veddb-core"
version = "0.1.0"
edition = "2021"
description = "Core shared memory primitives and data structures for VedDB"

[dependencies]
memmap2.workspace = true
libc.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "ring_benchmarks"
harness = false

[[bench]]
name = "kv_benchmarks"
harness = false
