[package]
name = "veddb-core"
version = "0.1.0"
edition = "2021"
description = "Core shared memory primitives and data structures for VedDB"

[dependencies]
memmap2.workspace = true
libc.workspace = true
crossbeam.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
bincode.workspace = true
tokio.workspace = true
crc32fast.workspace = true
sha2.workspace = true
hex = "0.4"
rand = "0.8"
log = "0.4"
bcrypt.workspace = true
jsonwebtoken.workspace = true
aes-gcm.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
zstd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
toml.workspace = true
sysinfo = "0.31"

# RocksDB is optional and requires LLVM/Clang on Windows
# Install LLVM from https://releases.llvm.org/ and set LIBCLANG_PATH
rocksdb = { workspace = true, optional = true }

[features]
default = []
rocksdb-storage = ["rocksdb"]

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "ring_benchmarks"
harness = false

[[bench]]
name = "kv_benchmarks"
harness = false
