[package]
name = "veddb-migrate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VedDB v0.1.x to v0.2.0 migration tool"

[[bin]]
name = "veddb-migrate"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
crc32fast.workspace = true
bincode.workspace = true

# Local dependencies
veddb-core = { path = "../veddb-core" }

# Additional dependencies for migration
walkdir = "2.4"
indicatif = "0.17"
base64 = "0.21"

[dev-dependencies]
tempfile.workspace = true